--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="sl-SI">
+<html lang="en-EN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
