--- a/src/web/templates/web/attendee_list.html
+++ b/src/web/templates/web/attendee_list.html
@@ -2,5 +2,21 @@
 {% block title %}List Attendees{% endblock %}
 
 {% block content %}
-<p>Here you view Attendees.</p>
+<h4 class="p-4 fw-lighter uppercase">List of Attendees</h4>
+<hr>
+<div class="p-2">
+    <ul class="list-group">
+        {% for attendee in attendee_list %}
+
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            <span class="fw-light"><span class="fw-bold">{{ attendee.surname }}</span> , {{ attendee.name }}</span>
+            <a class="btn btn-body"
+               href="{% url 'attendee' pk=attendee.pk %}">Edit
+            </a>
+        </li>
+
+        {% endfor %}
+
+    </ul>
+</div>
 {% endblock %}
