attendee edit form - fixed submit button

--- a/src/web/templates/web/attendee_edit.html
+++ b/src/web/templates/web/attendee_edit.html
@@ -2,14 +2,13 @@
 {% block title %}Attendee{% endblock %}
 
 {% block content %}
-<form action="." method="post">
+<form id="attendee_edit_form" action="{% url 'attendee_edit' pk=attendee.pk %}" method="POST">
     {% csrf_token %}
     <div class="p-4 pb-0">
         <span class="fw-lighter"> Edit Attendee:</span>
         <h4 class="fw-light uppercase">{{ attendee.name }} {{ attendee.surname }}</h4>
         <hr>
     </div>
-
     <div class="row g-3 p-4">
         <div class="row g-3">
             <div class="col-md-4 fw-light">
@@ -39,9 +38,9 @@
         </div>
     </div>
     <div class="col-12 p-4">
-            {{ form.non_field_errors }}
-            <button type="submit" class="btn btn-body">Submit</button>
-        </div>
+        {{ form.non_field_errors }}
+        <button type="submit" name="submit" class="btn btn-body">Submit</button>
+    </div>
 
 </form>
 
