changed in attendee-list edit button to view

--- a/src/web/templates/web/attendee_list.html
+++ b/src/web/templates/web/attendee_list.html
@@ -11,7 +11,7 @@
         <li class="list-group-item d-flex justify-content-between align-items-center">
             <span class="fw-light"><span class="fw-bold">{{ attendee.surname }}</span> , {{ attendee.name }}</span>
             <a class="btn btn-body"
-               href="{% url 'attendee' pk=attendee.pk %}">Edit
+               href="{% url 'attendee' pk=attendee.pk %}">View
             </a>
         </li>
 
