added arrivals check view

--- a/src/web/templates/web/arrivals_check.html
+++ b/src/web/templates/web/arrivals_check.html
@@ -2,5 +2,29 @@
 {% block title %}Check Arrivals{% endblock %}
 
 {% block content %}
-<p>Here is the list of Arrivals.</p>
+<h4 class="p-4 fw-lighter uppercase">List of Arrivals</span>
+</h4>
+<hr>
+<div class="p-2">
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">Attendee</th>
+            <th scope="col">Time of Arrival</th>
+            <th scope="col"></th>
+        </tr>
+        </thead>
+        {% for arrival in arrival_list %}
+        <tbody>
+        <tr>
+            <td>{{ arrival.attendee }}</td>
+            <td>{{arrival.arrival|date:"d. F Y"}}  at {{arrival.arrival|time:"H:i"}}</td>
+            <td><a class="btn btn-body p-l-4"
+                   href="{% url 'arrival' pk=arrival.pk %}">View
+                </a></td>
+        </tr>
+        {% endfor %}
+        </tbody>
+    </table>
+</div>
 {% endblock %}
