added search filter for arrivals list

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/base.css" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
