added text on index page

--- a/src/web/templates/web/index.html
+++ b/src/web/templates/web/index.html
@@ -2,5 +2,6 @@
 {% block title %}Conference App{% endblock %}
 
 {% block content %}
-<p>Index page of Conference App</p>
+<h1 class="d-flex justify-content-center p-4">Welcome to the Conference APP</h1>
+<h2>Sign up or login here</h2>
 {% endblock %}
