--- a/src/web/templates/web/index.html
+++ b/src/web/templates/web/index.html
@@ -3,5 +3,10 @@
 
 {% block content %}
 <h1 class="d-flex justify-content-center p-4">Welcome to the Conference APP</h1>
-<h2>Sign up or login here</h2>
+<h4 class="d-flex justify-content-center p-4">
+    <div class="d-flex justify-content-center p-4">
+        <div class="h3 mb-3 fw-light m-4"><a type="submit" class="btn btn-body" href="{% url 'register'%}">Sign up</a></div>
+        <div class="h3 mb-3 fw-light m-4"><a type="submit" class="btn btn-body" href="{% url 'login'%}">Login</a></div>
+    </div>
+</h4>
 {% endblock %}
