--- a/src/web/templates/registration/register.html
+++ b/src/web/templates/registration/register.html
@@ -5,9 +5,56 @@
 <main class="row justify-content-md-center p-4 mt-4">
     <form class="form-floating col-4 mt-4" method="post" action="{% url 'register' %}">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Sign up</button>
+        <div class="p-4 pb-0">
+            <h3 class="fw-lighter"> Sign up here</h3>
+            <hr>
+        </div>
+        <div class="row g-3 p-4">
+            <div class="row g-3">
+                <div class="col-md-8 fw-light">
+                    {{ form.username.errors }}
+                    {{ form.username.label_tag }}
+                    {{ form.username }}
+                </div>
+                <div class="row g-3">
+                    <div class="col-md-6 fw-light">
+                        {{ form.first_name.errors }}
+                        {{ form.first_name.label_tag }}
+                        {{ form.first_name }}
+                    </div>
+                    <div class="col-md-6  pb-2 fw-light">
+                        {{ form.last_name.errors }}
+                        {{ form.last_name.label_tag }}
+                        {{ form.last_name }}
+                    </div>
+                </div>
+            </div>
+            <div class="row g-3">
+                <div class="col-md-8  pb-2 fw-light">
+                    {{ form.email.errors }}
+                    {{ form.email.label_tag }}
+                    {{ form.email }}
+                </div>
+            </div>
+            <div class="row g-3">
+                <div class="col-md-8 pb-2 fw-light">
+                    {{ form.password1.errors }}
+                    {{ form.password1.label_tag }}
+                    {{ form.password1 }}
+                </div>
+            </div>
+            <div class="row g-3">
+                <div class="col-md-8 pb-2 fw-light">
+                    {{ form.password2.errors }}
+                    {{ form.password2.label_tag }}
+                    {{ form.password2 }}
+                </div>
+            </div>
+        </div>
+        <div class="col-12 p-4">
+            {{ form.non_field_errors }}
+            <button type="submit" name="submit" class="btn btn-body">Submit</button>
+        </div>
     </form>
-    <p>If you have an account, login here.</p>
 </main>
 {% endblock %}
