added test for attendee list dispaly, attendee add, page display for authorized and unauthorized user

--- a/src/web/templates/web/index.html
+++ b/src/web/templates/web/index.html
@@ -2,7 +2,7 @@
 {% block title %}Conference App{% endblock %}
 
 {% block content %}
-<h1 class="d-flex justify-content-center p-4">Welcome to the Conference APP</h1>
+<h1 class="d-flex justify-content-center p-4">Welcome to the Conference APP!</h1>
 <h4 class="d-flex justify-content-center p-4">
     <div class="d-flex justify-content-center p-4">
         <div class="h3 mb-3 fw-light m-4"><a type="submit" class="btn btn-body" href="{% url 'register'%}">Sign up</a></div>
