--- a/src/web/templates/web/home.html
+++ b/src/web/templates/web/home.html
@@ -3,5 +3,6 @@
 
 {% block content %}
 <h1 class="d-flex justify-content-center p-4">Welcome to the Conference APP</h1>
+<p>This is the homepage.</p>
 
 {% endblock %}
