--- a/src/web/templates/web/arrivals_add.html
+++ b/src/web/templates/web/arrivals_add.html
@@ -2,7 +2,8 @@
 {% block title %}Add Arrival{% endblock %}
 
 {% block content %}
-<p class="m-4">Here you can add a new Arrival.</p>
+<h4 class="p-4 fw-lighter uppercase">Here you can add new arrivals</h4>
+<hr>
 <form action="{% url 'arrivals_add' %}" method="post" class="row align-items-end">
     {% csrf_token %}
     <div class="row g-3">
