added explanation on how to run application and what it does + navbar naming fix

--- a/src/web/templates/base.html
+++ b/src/web/templates/base.html
@@ -31,13 +31,13 @@
                             <a class="nav-link" aria-pressed="true" href="{% url 'attendee_add'%}">Add Attendee</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'attendee_list'%}" aria-pressed="true">List Attendees</a>
+                            <a class="nav-link" href="{% url 'attendee_list'%}" aria-pressed="true">Attendee List</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'arrivals_add'%}" aria-pressed="true">Add Arrival</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'arrivals_check'%}" aria-pressed="true">Check arrivals</a>
+                            <a class="nav-link" href="{% url 'arrivals_check'%}" aria-pressed="true">Arrival List</a>
                         </li>
                     </ul>
 
