--- a/src/web/templates/web/arrivals_check.html
+++ b/src/web/templates/web/arrivals_check.html
@@ -5,8 +5,13 @@
 <h4 class="p-4 fw-lighter uppercase">List of Arrivals</span>
 </h4>
 <div class="col p-4">
-    <label for="arrivals_name">Search List of Arrivals:</label>
-    <input id="arrivals_name" type="text" placeholder="Search here"/>
+    <!--    <label for="arrivals_name">Search List of Arrivals:</label>-->
+    <!--    <input id="arrivals_name" type="text" placeholder="Search here"/>-->
+    <form action="{% url 'arrivals_check' %}" method="GET">
+        <label for="arrivals_name">Search List of Arrivals:</label>
+        <input id="arrivals_name" name="q" type="text" placeholder="Search here" value="{{ q }}"/>
+        <button type="Submit">search</button>
+    </form>
 </div>
 <hr>
 <div class="p-4">
@@ -31,13 +36,4 @@
         </tbody>
     </table>
 </div>
-<script>
-    $(document).ready(function () {
-        $("#arrivals_name").on("keyup", function () {
-            let value = $(this).val().toLowerCase();
-            $("#arrivals_list tr").filter(function () {
-                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-            });
-        });
-    });</script>
 {% endblock %}
